--- a/src/utils/i18n/locales/en/en.json
+++ b/src/utils/i18n/locales/en/en.json
@@ -214,7 +214,7 @@
     "alphabetically": "Alphabetically"
   },
   "footer": {
-    "development": "Development of Baza Trainee Ukraine ",
+    "development": "Apply Tracker ",
     "rights": " © All rights have been reserved"
   },
   "modalMappingContentMap": {
