--- a/src/utils/i18n/locales/uk/uk.json
+++ b/src/utils/i18n/locales/uk/uk.json
@@ -213,7 +213,7 @@
     "alphabetically": "За абеткою"
   },
   "footer": {
-    "development": "Розробка Baza Trainee Ukraine ",
+    "development": "Apply Tracker ",
     "rights": " © Усі права захищені"
   },
   "modalMappingContentMap": {
