--- a/src/utils/i18n/locales/en/en.json
+++ b/src/utils/i18n/locales/en/en.json
@@ -1,14 +1,14 @@
 {
   "or": "Or",
   "welcome": "Welcome to React and react-i18next",
-  "user": "користувач",
+  "user": "user",
   "name": "Name",
   "phone": "Phone number",
   "modalAddProperties": {
     "linkName": "Name",
     "placeHolderSocials": "Enter the name of the link",
     "linkSocial": "Link to social network",
-    "placeholderlinkSocial": "Insert a link to a social network",
+    "placeholderLinkSocial": "Insert a link to a social network",
     "placeholderNameResume": "Enter the name of the resume",
     "linkResume": "Link to resume",
     "placeholderLinkResume": "Insert a link to your resume",
@@ -19,7 +19,7 @@
     "technology": "Technologies",
     "placeholderTechnology": "Specify the technologies used",
     "linkProject": "Link to the project",
-    "placeholderlinkProject": "Insert a link to the project",
+    "placeholderLinkProject": "Insert a link to the project",
     "textProject": "Description of the project",
     "placeholderTextProject": "You can describe the project",
     "modalRemoveLink": "Remove link",
@@ -99,7 +99,7 @@
     "subHeader": "Log in to continue tracking your responses",
     "forgotPassword": "Forgot password?",
     "noAccount": "Don't have an account?",
-    "message": "Authorisation was successful. Now you can set up your profile."
+    "message": "Authorization was successful. Now you can set up your profile."
   },
   "resetPassword": {
     "header": "Set a new password",
@@ -174,7 +174,7 @@
     "firstMessage": "Save at least one vacancy to see statistics!",
     "predictions": "Predictions for today"
   },
-  "statisticsDoughnatDiagram": "Statistics of active statuses",
+  "statisticsDoughnutDiagram": "Statistics of active statuses",
   "statisticsRejectDiagram": {
     "title": "Reasons for rejections",
     "OTHER": "Other",
@@ -443,7 +443,7 @@
       "notifyDeleteEventSuccess": "Event successfully deleted!",
       "notifyDeleteEventError": "Failed to delete event."
     },
-    "arhiveVacancy": {
+    "archiveVacancy": {
       "title": "Move a vacancy to the archive?",
       "text_1": "You can always find it using the button in the upper right corner"
     },
