--- a/src/utils/i18n/locales/en/en.json
+++ b/src/utils/i18n/locales/en/en.json
@@ -478,7 +478,8 @@
     "invalidMinutes": "Minutes must be between 0 and 59",
     "invalidPastDate": "Select the current date",
     "showEventArchive": "Show event archive",
-    "hideEventArchive": "Hide event archive"
+    "hideEventArchive": "Hide event archive",
+    "hoursRequired": "This field is required"
   },
   "calendarTabs": {
     "day": "Day",
