fix add vacancy reject errors

--- a/src/utils/i18n/locales/en/en.json
+++ b/src/utils/i18n/locales/en/en.json
@@ -307,6 +307,12 @@
     },
     "notes": {
       "max": "Maximum length is 1000 characters"
+    },
+    "resume": {
+      "required": "Choose a resume"
+    },
+    "reject": {
+      "required": "Choose a reason for rejection"
     }
   },
   "editVacancy": {
