--- a/src/utils/i18n/locales/uk/uk.json
+++ b/src/utils/i18n/locales/uk/uk.json
@@ -305,6 +305,12 @@
     },
     "notes": {
       "max": "Максимальна довжина 1000 символів"
+    },
+    "resume": {
+      "required": "Оберіть резюме"
+    },
+    "reject": {
+      "required": "Оберіть причину відмови"
     }
   },
   "editVacancy": {
