--- a/src/utils/i18n/locales/uk/uk.json
+++ b/src/utils/i18n/locales/uk/uk.json
@@ -391,11 +391,16 @@
       "confirm": "Ок",
       "edit": "Редагувати",
       "close": "Закрити",
-      "agree": "Так"
+      "agree": "Так",
+      "return": "Повернутися"
     },
     "logOut": {
       "title": "Ви впевнені, що хочете вийти?",
       "text_1": "Вихід з акаунту призведе до завершення вашої сесії. Для повторного входу потрібно буде ввести ваші облікові дані."
+    },
+    "closeModalSaveAddVacancies": {
+      "title": "Закрити без збереження?",
+      "text_1": "Якщо ви не збережете данні, вони будуть втрачені."
     },
     "saveAddVacancies": {
       "title": "Зберегти зміни?",
