--- a/src/utils/i18n/locales/uk/uk.json
+++ b/src/utils/i18n/locales/uk/uk.json
@@ -63,7 +63,11 @@
     "vacancyDelete": "Вакансію успішно видалено. Дякую",
     "vacancyDeleteError": "Виникла помилка. Вакансію не видалено",
     "noteDelete": "Нотатку успішно видалено. Дякую",
-    "noteDeleteError": "Виникла помилка. Нотатку не видалено"
+    "noteDeleteError": "Виникла помилка. Нотатку не видалено",
+    "supportDelete": "Запит успішно видалено. Дякую",
+    "supportDeleteError": "Виникла помилка. Запит не видалено",
+    "supportSent": "Дані успішно відправлено. Дякую",
+    "supportSentError": "Помилка відпралення даних. Спробуйте ще раз"
   },
   "navigation": {
     "vacancies": "Вакансії",
@@ -406,6 +410,15 @@
       "title": "Зберегти зміни?",
       "text_1": "Якщо ви не збережете данні, вони будуть втрачені."
     },
+    "saveContactUs": {
+      "title": "Зберегти зміни?",
+      "text_1": "Якщо ви не збережете данні, вони будуть втрачені."
+    },
+    "closeModalSaveContactUs": {
+      "title": "Закрити без збереження?",
+      "text_1": "Якщо ви не збережете данні, вони будуть втрачені."
+    },
+
     "deleteVacancy": {
       "title": "Видалити вакансію?",
       "text_1": "Ця дія буде незворотною. Натомість, ви можете перенести цю вакансію в архів"
@@ -453,10 +466,11 @@
       "notifyDeleteEventSuccess": "Подію успішно видалено!",
       "notifyDeleteEventError": "Не вдалося видалити подію."
     },
-    "arhiveVacancy": {
+    "archiveVacancy": {
       "title": "Перенести вакансію в архів?",
       "text_1": "Ви завжди зможете знайти її за допомогою кнопки в верхньому правому куті"
     },
+
     "restoreVacancy": {
       "title": "Відновити вакансію з архіву?",
       "text_1": "Вакансію буде перенесено до основного списку"
