--- a/src/utils/i18n/locales/en/en.json
+++ b/src/utils/i18n/locales/en/en.json
@@ -138,7 +138,7 @@
     "max50Characters": "Maximum 50 characters",
     "invalidUrl": "Enter a valid URL",
     "invalidPdf": "Enter a valid .pdf URL",
-    "phoneNumberInvalid": "Only digits (3–12), optionally starting with +"
+    "phoneNumberInvalid": "Only digits (10-12), optionally starting with +"
   },
   "vacanciesHeader": {
     "search": "Search",
