--- a/src/utils/i18n/locales/uk/uk.json
+++ b/src/utils/i18n/locales/uk/uk.json
@@ -67,7 +67,7 @@
     "supportDelete": "Запит успішно видалено. Дякую",
     "supportDeleteError": "Виникла помилка. Запит не видалено",
     "supportSent": "Дані успішно відправлено. Дякую",
-    "supportSentError": "Помилка відпралення даних. Спробуйте ще раз"
+    "supportSentError": "Виникла помилка. Спробуйте ще раз"
   },
   "navigation": {
     "vacancies": "Вакансії",
@@ -396,7 +396,8 @@
       "edit": "Редагувати",
       "close": "Закрити",
       "agree": "Так",
-      "return": "Повернутися"
+      "return": "Повернутися",
+      "send": "Відправити"
     },
     "logOut": {
       "title": "Ви впевнені, що хочете вийти?",
@@ -406,11 +407,11 @@
       "title": "Закрити без збереження?",
       "text_1": "Якщо ви не збережете данні, вони будуть втрачені."
     },
-    "saveAddVacancies": {
-      "title": "Зберегти зміни?",
-      "text_1": "Якщо ви не збережете данні, вони будуть втрачені."
-    },
     "saveContactUs": {
+      "title": "Відправити запит?",
+      "text_1": "Якщо ви не підтвердете, данні будуть втрачені."
+    },
+    "saveAddVacancies": {
       "title": "Зберегти зміни?",
       "text_1": "Якщо ви не збережете данні, вони будуть втрачені."
     },
