--- a/src/utils/i18n/locales/uk/uk.json
+++ b/src/utils/i18n/locales/uk/uk.json
@@ -445,6 +445,9 @@
       "text_1": "Зміна пароля успішна.",
       "text_2": "Авторизуйтесь з новим паролем"
     },
+    "contactUsSended": {
+      "text_1": "Повідомлення успішно надіслано."
+    },
     "resetPasswordErrorLink": {
       "text_1": "Посилання на відновлення паролю не дійсне.",
       "text_2": "Спробуйте ще раз"
