--- a/src/utils/i18n/locales/uk/uk.json
+++ b/src/utils/i18n/locales/uk/uk.json
@@ -148,7 +148,8 @@
     "searchResult234": "результати з пошуку",
     "searchResults": "результатів з пошуку",
     "emptySection": "В цій секції не має вакансій...",
-    "cardFirst": "Збережіть вашу першу вакансію"
+    "cardFirst": "Збережіть вашу першу вакансію",
+    "searchError": "Поле пошуку не може бути порожнім"
   },
   "sortDropdown": {
     "sortBy": "Сортувати",
