--- a/src/utils/i18n/locales/uk/uk.json
+++ b/src/utils/i18n/locales/uk/uk.json
@@ -149,7 +149,8 @@
     "searchResults": "результатів з пошуку",
     "emptySection": "В цій секції не має вакансій...",
     "cardFirst": "Збережіть вашу першу вакансію",
-    "searchError": "Поле пошуку не може бути порожнім"
+    "searchError": "Поле пошуку не може бути порожнім",
+    "searchMaxError": "Поле пошуку не може бути більше 50 символів"
   },
   "sortDropdown": {
     "sortBy": "Сортувати",
